--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </div>
           <div class="avatar__image">
             <img
-              src="img/avatars/1.png"
+              src="img/avatars/1.jpg"
               alt="LITTLE"
             />
           </div>
