--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- Page Title -->
-    <title>LIT</title>
+    <title>LITTLE</title>
 
     <!-- Meta Tags -->
     <meta
